# mkdocs-today-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
test/simple/: mkdocs.yml
test/simple/docs/: index.md
today/: plugin.py
